--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+      "vercel": "vercel",
+      "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -71,6 +72,7 @@
     "@types/react-dom": "^19.1.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vercel": "^42.2.0"
   }
 }
